--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "tailwindcss": "^4.0.0",
     "vite": "^5.4.14"
   },
   "description": "This template should help get you started developing with Vue 3 in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
