--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "express": "^4.21.1",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "pg": "^8.13.2",
     "streamifier": "^0.1.1"
   }
 }
